--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="TemplateMo">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sekolah Prestasi</title>
+    <title>Medalers</title>
 <!--
 
 Lava Landing Page
@@ -50,7 +50,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            Sekolah prestasi
+                            Halo Sobat Medalers!
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -105,7 +105,7 @@ https://templatemo.com/tm-540-lava-landing-page
     <!-- ***** Welcome Area End ***** -->
 
     <!-- ***** Features Big Item Start ***** -->
-    <section class="section" id="product">
+<!--     <section class="section" id="product">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12"
@@ -169,13 +169,13 @@ https://templatemo.com/tm-540-lava-landing-page
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Features Big Item End ***** -->
 
     <div class="left-image-decor"></div>
 
     <!-- ***** Features Big Item Start ***** -->
-    <section class="section" id="about">
+<!--     <section class="section" id="about">
         <div class="container">
             <div class="row">
                 <div class="left-image col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix-big"
@@ -212,13 +212,13 @@ https://templatemo.com/tm-540-lava-landing-page
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Features Big Item End ***** -->
 
     <div class="right-image-decor"></div>
 
     <!-- ***** Testimonials Starts ***** -->
-    <section class="section" id="testimonials">
+<!--     <section class="section" id="testimonials">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 offset-lg-2">
@@ -303,7 +303,7 @@ https://templatemo.com/tm-540-lava-landing-page
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Testimonials Ends ***** -->
 
 
