--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ https://templatemo.com/tm-540-lava-landing-page
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            Halo Sobat Medalers!
+                            Medalers
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Halman Utama</a></li>
-                            <li class="scroll-to-section"><a href="#product" class="menu-item">Paket</a></li>  
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimoni</a>
+<!--                             <li class="scroll-to-section"><a href="#product" class="menu-item">Paket</a></li>  
+                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimoni</a> -->
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Tentang</a></li>
                             </li>
                      <!--        <li class="submenu">
@@ -93,7 +93,7 @@ https://templatemo.com/tm-540-lava-landing-page
                     <div class="left-text col-lg-6 col-md-12 col-sm-12 col-xs-12"
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                         <h3><b>Jangan Kasih Kendor!</b></h3> <h1>Belajar <em>Jadi <i>Medalist</i></em> disini!</h1>
-                        <p>Kurikulum <a href="#">Sekolah Prestasi</a> disusun langsung oleh tenaga profesional dan berpengalaman. Kita akan belajar bersama menjadi para juara <b>untuk Indonesia!</b> <br><br>Tersedia paket kelas belajar penulisan karya ilmiah, presentasi dan poster, <i>public speaking</i>, serta kelas intensif siap lomba.
+                        <p>Kurikulum <a href="#">Medalers</a> disusun langsung oleh tenaga profesional dan berpengalaman. Kita akan belajar bersama menjadi para juara <b>untuk Indonesia!</b> <br><br>Tersedia paket kelas belajar penulisan karya ilmiah, presentasi dan poster, <i>public speaking</i>, serta kelas intensif siap lomba.
                         </p> 
                         <a href="#about" class="main-button-slider">Siap Jadi Juara?</a>
                     </div>
