--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://templatemo.com/tm-540-lava-landing-page
     <div class="left-image-decor"></div>
 
     <!-- ***** Features Big Item Start ***** -->
-<!--     <section class="section" id="about">
+<!-- <section class="section" id="about">
         <div class="container">
             <div class="row">
                 <div class="left-image col-lg-5 col-md-12 col-sm-12 mobile-bottom-fix-big"
@@ -313,7 +313,7 @@ https://templatemo.com/tm-540-lava-landing-page
             <div class="footer-content">
                 <div class="row">
                     <!-- ***** Contact Form Start ***** -->
-                    <div class="col-lg-6 col-md-12 col-sm-12">
+<!--                     <div class="col-lg-6 col-md-12 col-sm-12">
                         <div class="contact-form">
                             <form id="contact" action="" method="post">
                                 <div class="row">
@@ -343,11 +343,11 @@ https://templatemo.com/tm-540-lava-landing-page
                                 </div>
                             </form>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- ***** Contact Form End ***** -->
                     <div class="right-content col-lg-6 col-md-12 col-sm-12">
                         <h2>Tentang & Kontak <em>Kami</em></h2>
-                        <p>Sekolah Prestasi berkomitmen menjadi wadah semangat bagi para siswa dan mahasiswa. Mencetak para juara yang mengharumkan negeri. Memunculkan para pembelajar dengan mimpi tinggi yang tetap rendah hati. Karena "Jika bukan anak bangsa sendiri, siapa lagi yang akan membangun negeri?" - Alm. B. J. Habibie
+                        <p>Medalers berkomitmen menjadi wadah semangat bagi para siswa dan mahasiswa. Mencetak para juara yang mengharumkan negeri. Memunculkan para pembelajar dengan mimpi tinggi yang tetap rendah hati. Karena "Jika bukan anak bangsa sendiri, siapa lagi yang akan membangun negeri?" - Alm. B. J. Habibie
                             <br><br>Selalu terkoneksi dengan kami melalui berbagai media sosial kami.
                         <ul class="social">
                             <!-- <li><a href="https://fb.com/templatemo"><i class="fa fa-facebook"></i></a></li>
