--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-540-lava-landing-page
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Halman Utama</a></li>
 <!--                             <li class="scroll-to-section"><a href="#product" class="menu-item">Paket</a></li>  
                             <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimoni</a> -->
-                            <li class="scroll-to-section"><a href="#about" class="menu-item">Tentang</a></li>
+<!--                             <li class="scroll-to-section"><a href="#about" class="menu-item">Tentang</a></li> -->
                             </li>
                      <!--        <li class="submenu">
                                 <a href="javascript:;">Drop Down</a>
@@ -69,7 +69,7 @@ https://templatemo.com/tm-540-lava-landing-page
                                     <li><a href="" class="menu-item">Blog</a></li>
                                 </ul>
                             </li> -->
-                            <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Hubungi Kami</a></li>
+<!--                             <li class="scroll-to-section"><a href="#contact-us" class="menu-item">Hubungi Kami</a></li> -->
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
